# APANModules3

./: eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  qqq  qqq.pub
app/: main.py
